{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 86,
  "lineage": "881a4faf-9988-c8d6-4227-cc6229e2461b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.234.153.28",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-17T09:21:35.971-08:00",
            "id": "projects/devops-374714/regions/europe-west2/addresses/vm-public-address",
            "name": "vm-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "devops-374714",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-374714/regions/europe-west2/addresses/vm-public-address"
          },
          "dependencies": [
            "google_compute_firewall.firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080",
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-17T09:21:24.160-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-374714/global/firewalls/jenky",
            "log_config": [],
            "name": "jenky",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-374714/global/networks/default",
            "priority": 1000,
            "project": "devops-374714",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-374714/global/firewalls/jenky",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-17T09:21:24.167-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-374714/global/firewalls/firewall-externalssh",
            "log_config": [],
            "name": "firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-374714/global/networks/default",
            "priority": 1000,
            "project": "devops-374714",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-374714/global/firewalls/firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserverrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-17T09:21:23.910-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-374714/global/firewalls/webserver1",
            "log_config": [],
            "name": "webserver1",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-374714/global/networks/default",
            "priority": 1000,
            "project": "devops-374714",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-374714/global/firewalls/webserver1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20230114",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-374714/zones/europe-west2-a/disks/jenkins-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devops-374714/zones/europe-west2-a/instances/jenkins-server",
            "instance_id": "410165935382161347",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2d-highcpu-8",
            "metadata": {
              "ssh-keys": "samhiscox:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDERuaTkH8D1P17la5/m4bYrtHQoBpQelgukRHw+OraUhh4RzVy21uGIFB/UoMNvSqxs8vaYP7gSDelhumb9fVqF1KmUdZCJLouVMwMxgTNjcqyBz6CGK4xRvc7n0JbMdfnMgcBgiHJm4rei4RgpPB60w8Ykf+q9h26xfF9fDd6vapDAQwndhS5TiVCSzOQskc5tTHZ6n/TfVWGG3tq9v6UH7HCJ2sqnulxPkBXcddHDhfpqm03arYyT8hlw60s9UrLIBcVVGckE3JttBSq3I+pg4hRoWD84fBm2QRyJcV8KVBgqQeseD9iDbAlq20EpThjUIk0c+xxxQoyp7FQ6iBn3LNIC8kv1xgheD2kH7Iv1ZCl4cKTYig5ShHjuigsCUVVVi5gYo4sZm/ypQVH10PQmqkpwAJ7K0sjkDbbVxE [...]
            },
            "metadata_fingerprint": "lsu1GLvRAhU=",
            "name": "jenkins-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.234.153.28",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-374714/global/networks/default",
                "network_ip": "10.154.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-374714/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "devops-374714"
              }
            ],
            "project": "devops-374714",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-374714/zones/europe-west2-a/instances/jenkins-server",
            "service_account": [
              {
                "email": "terraform@devops-374714.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "https-server",
              "webserver"
            ],
            "tags_fingerprint": "s0U03gxFLl4=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_firewall.firewall",
            "google_compute_firewall.webserverrule"
          ]
        }
      ]
    }
  ]
}